Fixed wrong padding bug with sample word in slogan block.

--- a/src/views/page/Home/components/SloganBlock.scss
+++ b/src/views/page/Home/components/SloganBlock.scss
@@ -64,7 +64,7 @@
 
           @include media-breakpoint-up(xxl) {
             font-size: 48px;
-            padding: 35px 60px;
+            padding: 35px 46px;
           }
         }
       }
